<resources>
    <string name="app_name">艺术品世界</string>
    <string name="bookDraw">书画</string>
    <string name="oilDraw">油画</string>
    <string name="birdDraw">花鸟画</string>
    <string name="hilDraw">山水画</string>
    <string name="peopleDraw">人物画</string>
    <string name="moneyDraw">钱币</string>
    <string name="jadeDraw">玉器</string>
    <string name="fineDraw">民间精品</string>
    <string name="furnitureDraw">古家具</string>
    <string name="moreDraw">更多</string>
    <string name="search_hint">文化艺术品 / 玉器 / 陶瓷...</string>
    <string name="tab_item_home">首页</string>
    <string name="tab_item_auction">拍卖</string>
    <string name="tab_item_message">消息</string>
    <string name="tab_item_my">我的</string>
    <string name="classify_title">分类</string>
    <string name="participating_auction">参与的拍卖</string>
    <string name="check_all">查看全部</string>
    <string name="for_the_delivery">待交割</string>
    <string name="compete">参拍中</string>
    <string name="is_the_delivery">已交割</string>
    <string name="after_sale">投诉</string>
    <string name="mywallet">我的钱包</string>
    <string name="mybond">保证金</string>
    <string name="complaint">售后投诉</string>

    <string name="mycollection">我的收藏</string>
    <string name="address">收货地址</string>
    <string name="realnameauthentication">实名认证</string>
    <string name="setting">设置</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register_title">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="sms_success">短信发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="modification_success">修改成功</string>
    <string name="input_correct_phone">请输入有效手机号</string>
    <string name="recent_message">最近消息</string>
    <string name="address_list">通讯录</string>
    <string name="system_message">系统消息</string>
    <string name="order_message">订单消息</string>
    <string name="login_hint">手机号或密码为空</string>
    <string name="login_success">恭喜你，登录成功</string>
    <string name="head_portrait">头像</string>
    <string name="nick">昵称</string>
    <string name="DetailIntroduction">详情介绍</string>
    <string name="AuctionCentre">拍卖中心</string>
    <string name="all">全部</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="cart_yuan_dol">¥</string>
    <string name="real_name">真实姓名</string>
    <string name="user_agreement">用户协议</string>
    <string-array name="balance_title">
        <item>全部</item>
        <item>收入</item>
        <item>支出</item>
    </string-array>
    <string name="withdraw">提现</string>
    <string name="recharge">充值</string>

    <!--添加银行卡-->
    <string name="add_bank_card_owner">持卡人</string>
    <string name="add_bank_card_owner_hint">请输入持卡人姓名</string>
    <string name="add_bank_card_NO">卡号</string>
    <string name="add_bank_card_NO_hint">请输入银行卡号</string>
    <string name="add_bank_card_branch">支行</string>
    <string name="add_bank_card_branch_hint">支行信息</string>
    <string name="add_bank_card_mobile">手机号</string>
    <string name="add_bank_card_mobile_hint">请输入银行预留手机号</string>
    <string name="add_bank_card_code">验证码</string>
    <string name="add_bank_card_get_code">获取验证码</string>
    <string name="add_bank_card_code_hint">请输入验证码</string>
    <string name="bank_card">银行卡</string>

    <string name="change_nickname">修改昵称</string>
    <string name="change_phone">修改手机号码</string>
    <string name="change_password">修改密码</string>
    <string name="change_trader_password">修改交易密码</string>

    <string name="cashdeposit">保证金</string>
    <string name="auction_order">拍卖订单</string>
    <string name="authentication">实名认证</string>

    <string name="order_detail">订单详情</string>
    <string name="complaint_detail">投诉详情</string>
    <string name="select">%1$s/%2$s</string>
    <string name="start_complaint">发起投诉</string>


    <!--最近会话-->
    <string name="draft">[草稿]</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="sticker">贴图</string>
    <string name="video">视频</string>
    <string name="set_conversation_to_top">置顶聊天</string>
    <string name="cancel_conversation_to_top">取消置顶</string>
    <string name="delete_conversation">删除该聊天</string>


    <string-array name="order_them_title">
        <item>全部</item>
        <item>参拍中</item>
        <item>已获拍</item>
        <item>未获拍</item>
    </string-array>

    <string name="havepat">已获拍</string>
    <string name="not_pat">未获拍</string>
    <string name="consultation_hotline">咨询热线</string>
</resources>
