<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f1f1f1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/actionbar_root_layout" />

    <!--持卡人-->
    <RelativeLayout
        android:id="@+id/addBankCardOwner"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_bank_card_owner"
            android:textColor="@color/black_151515"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etBankCardOwner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/add_bank_card_owner_hint"
            android:maxLength="9"
            android:singleLine="true"
            android:textColor="@color/grey_adadad"
            android:textSize="15sp" />

    </RelativeLayout>

    <!--卡号-->
    <RelativeLayout
        android:id="@+id/addBankCardNO"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/addBankCardOwner"
        android:layout_marginTop="1px"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_bank_card_NO"
            android:textColor="@color/black_151515"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etBankCardNO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/add_bank_card_NO_hint"
            android:inputType="number"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/grey_adadad"
            android:textSize="15sp" />

    </RelativeLayout>

    <!--支行-->
    <RelativeLayout
        android:id="@+id/addBankCardBranch"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1px"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_bank_card_branch"
            android:textColor="@color/black_151515"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etBankCardBranch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/add_bank_card_branch_hint"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/grey_adadad"
            android:textSize="15sp" />

    </RelativeLayout>

    <!--手机号-->
    <RelativeLayout
        android:id="@+id/addBankCardMobile"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1px"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_bank_card_mobile"
            android:textColor="@color/black_151515"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etBankCardMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/add_bank_card_mobile_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="@color/grey_adadad"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bj_50dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/bj_15dp"
        android:paddingRight="@dimen/bj_15dp">

        <LinearLayout
            android:id="@+id/pic_yzm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bj_56dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="图形验证码"
                android:textColor="@color/black_151515"
                android:textSize="@dimen/wz_15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bj_15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/pic_yzm_code"
                        style="@style/BigBlackTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="请输入"
                        android:maxLength="13"
                        android:singleLine="true"
                        android:textColor="@color/grey_e6333333"
                        android:textColorHint="@color/grey_66000000"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/pic_yzm_del"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?android:selectableItemBackground"
                        android:scaleType="centerInside"
                        android:src="@drawable/delete" />
                </LinearLayout>

                <View
                    android:id="@+id/pic_view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_e5e5e5" />
            </LinearLayout>

            <ImageView
                android:id="@+id/get_iamge"
                android:layout_width="94dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/bj_15dp"
                android:textColor="#F2302F"
                android:textSize="15sp" />

        </LinearLayout>
    </RelativeLayout>
    <!--验证码-->
    <RelativeLayout
        android:id="@+id/addBankCardCode"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="1px"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/add_bank_card_code"
            android:textColor="@color/black_151515"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etBankCardCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="105dp"
            android:layout_toLeftOf="@+id/addBankCardGetCode"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/add_bank_card_code_hint"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/grey_adadad"
            android:textSize="15sp" />

        <Button
            android:id="@+id/addBankCardGetCode"
            android:layout_width="104dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/drawable_stroke_red_17_radius_bg_selector"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="@drawable/btn_selector_text"
            android:textSize="13sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvCommitWithdraw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/red_bg"
        android:gravity="center"
        android:text="确认"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
