<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/bj_19dp"
    android:background="#362828"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_book_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_book_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_book_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/bookDraw"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_oil_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_oil_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_oil_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/oilDraw"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_bird_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_bird_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_bird_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/birdDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_hill_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_hill_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_hill_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/hilDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_people_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_people_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_people_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/peopleDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bj_22dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_money_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_money_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_money_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/moneyDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_jade_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_jade_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_jade_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/jadeDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_fine_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_fine_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_fine_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/fineDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_furniture_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_furniture_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_furniture_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/furnitureDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_more_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.smg.art.view.RoundImageView
                android:id="@+id/iv_more_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/draw_def" />

            <TextView
                android:id="@+id/tv_more_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/bj_8dp"
                android:text="@string/moreDraw"
                android:textColor="@color/white"
                android:textSize="@dimen/wz_12sp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_under"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bj_24dp"
        android:overScrollMode="never" />


</LinearLayout>
